    so customisation of templates is easier.
  * Drop debug from bootoptions and use debug=vc only. 'debug' without
    arguments avoids displaying the executed code in the initramfs
    which is something you usually want to have enabled by default
    when debugging a system.
  * Fix label name for ssh bootoption.
  * Add persistency feature to boot menu. [Closes: issue773]
  * Software related changes:
    - Add grml-quickconfig to GRMLBASE.
    - Add grml-quickconfig-standard to GRML_* classes.
    - Add xz-utils to GRML_FULL.
    - Add zerofree to GRML_MEDIUM and GRML_FULL.
    - Drop 3ware-cli-binary (license unclear).
    - Drop rar from GRML_FULL (license).
    - Drop xlockmore from GRML_FULL (using vlock instead in grml-lock).
    - Move grml-docs from GRMLBASE to GRML_{SMALL,MEDIUM,FULL} to be
      able to customize it easier.

 -- Michael Prokop <mika@grml.org>  Fri, 26 Feb 2010 14:52:03 +0100

grml-live (0.9.35) unstable; urgency=low

  * New features / major changes:
    - Moved /etc/grml/fai/files to /etc/grml/fai/config/files (and 
      /etc/grml/fai/live-initramfs to /etc/grml/fai/config/). This is
      an important step to use the config space and class concept of
      FAI in a more decent and cleaner way. Further details in NEWS
      file. Thanks to Henning Sprang for the initial hint.
    - Provide buildd as separate Debian package grml-live-buildd.
    - Store package list on ISO. [Closes: issue779] [Closes: issue749]
    - Support conf/bootid.txt and use bootoption bootfrom=removable by
      default.
    - Support NO_BOOTID to disable the new bootid feature.
    - Support DEFAULT_BOOTOPTIONS via configuration file.
  * Bugfixes / minor changes:
    - buildd: use nail instead of mutt for sending mails as recent
      versions of mutt introduced a major breakage (see #539276).
    - scripts/GRMLBASE/38-udev: check for presence of config file.
    - Ignore $EXIT_ON_MISSING_PACKAGES if running a dirty build
      through -B.